--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,8 +2,9 @@
   padding: 10;
   margin: 50;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, sans-serif;
 }
 
 form {
@@ -12,7 +13,7 @@ form {
   border-radius: 5px;
   margin: 10% auto;
   -webkit-box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
-          box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
+  box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
   padding: 2%;
   background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
 }
@@ -23,9 +24,9 @@ form .con {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   margin: 3% auto;
 }
 
@@ -54,8 +55,8 @@ header p {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 .input-item {
@@ -79,7 +80,7 @@ input[class="form-input"] {
   outline: none;
   border: none;
   -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   -webkit-transition: 0.2s linear;
   transition: 0.2s linear;
 }
@@ -91,7 +92,7 @@ input[id="txt-input"] {
 /* focus  */
 input:focus {
   -webkit-transform: translateX(-2px);
-          transform: translateX(-2px);
+  transform: translateX(-2px);
   border-radius: 5px;
 }
 
@@ -127,41 +128,42 @@ button {
 /* buttons hover */
 button:hover {
   -webkit-transform: translatey(3px);
-          transform: translatey(3px);
+  transform: translatey(3px);
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
 /* buttons hover Animation */
 button:hover {
   -webkit-animation: ani9 0.4s ease-in-out infinite alternate;
-          animation: ani9 0.4s ease-in-out infinite alternate;
+  animation: ani9 0.4s ease-in-out infinite alternate;
 }
 
 @-webkit-keyframes ani9 {
   0% {
     -webkit-transform: translateY(3px);
-            transform: translateY(3px);
+    transform: translateY(3px);
   }
   100% {
     -webkit-transform: translateY(5px);
-            transform: translateY(5px);
+    transform: translateY(5px);
   }
 }
 
 @keyframes ani9 {
   0% {
     -webkit-transform: translateY(3px);
-            transform: translateY(3px);
+    transform: translateY(3px);
   }
   100% {
     -webkit-transform: translateY(5px);
-            transform: translateY(5px);
+    transform: translateY(5px);
   }
 }
 
 nav {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
   display: block;
@@ -181,7 +183,8 @@ nav {
 }
 
 nav #nav-left-container {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
   display: table;
@@ -189,11 +192,12 @@ nav #nav-left-container {
   margin: 0 auto;
   width: 100%;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 nav #nav-left-container #nav-inner-l {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
   -webkit-transition: max-width 0.5s, min-width 0.5s;
@@ -217,7 +221,8 @@ nav #nav-left-container #nav-inner-l img {
 }
 
 nav #nav-right-container {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, sans-serif;
   color: #7f7f7f;
   cursor: auto;
   width: 100%;
@@ -281,14 +286,14 @@ nav #nav-right-container #nav-inner-r #link a:hover {
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   -webkit-box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
-          box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
+  box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
 }
 
 nav #nav-right-container #nav-inner-r #link a:active {
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   -webkit-box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
-          box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
+  box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 #233948 inset;
 }
 
 nav #nav-right-container #nav-inner-r #link a::-moz-selection {
@@ -308,18 +313,18 @@ nav #nav-right-container #nav-inner-r #link a::selection {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding-top: 3em;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .searchForm button {
   margin-left: 2em;
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -ms-grid-row-align: center;
+  align-self: center;
 }
 
 .message-profile-pic {
@@ -333,8 +338,9 @@ nav #nav-right-container #nav-inner-r #link a::selection {
   padding: 10;
   margin: 50;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, sans-serif;
 }
 
 form {
@@ -343,7 +349,7 @@ form {
   border-radius: 5px;
   margin: 10% auto;
   -webkit-box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
-          box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
+  box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
   padding: 2%;
   background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
 }
@@ -354,9 +360,9 @@ form .con {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   margin: 3% auto;
 }
 
@@ -385,8 +391,8 @@ header p {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 .input-item {
@@ -410,7 +416,7 @@ input[class="form-input"] {
   outline: none;
   border: none;
   -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   -webkit-transition: 0.2s linear;
   transition: 0.2s linear;
 }
@@ -422,7 +428,7 @@ input[id="txt-input"] {
 /* focus  */
 input:focus {
   -webkit-transform: translateX(-2px);
-          transform: translateX(-2px);
+  transform: translateX(-2px);
   border-radius: 5px;
 }
 
@@ -458,114 +464,30 @@ button {
 /* buttons hover */
 button:hover {
   -webkit-transform: translatey(3px);
-          transform: translatey(3px);
+  transform: translatey(3px);
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
 /* buttons hover Animation */
 button:hover {
   -webkit-animation: ani9 0.4s ease-in-out infinite alternate;
-          animation: ani9 0.4s ease-in-out infinite alternate;
+  animation: ani9 0.4s ease-in-out infinite alternate;
 }
 
 @keyframes ani9 {
   0% {
     -webkit-transform: translateY(3px);
-            transform: translateY(3px);
+    transform: translateY(3px);
   }
   100% {
     -webkit-transform: translateY(5px);
-            transform: translateY(5px);
+    transform: translateY(5px);
   }
 }
 
-.page {
-  padding: 10;
-  margin: 50;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
-}
-
-.container {
-  max-width: 1250px;
-  border-radius: 5px;
-  margin: 10% auto;
-  width: 90%;
-  -webkit-box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
-          box-shadow: 0 9px 50px rgba(234, 177, 149, 0.31);
-  padding: 2%;
-}
-
-.profile-banner {
-  background: #eee;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-color: #9dd57c;
-  height: 250px;
-}
-
-header i {
-  position: relative;
-  cursor: pointer;
-  right: -96%;
-  top: 25px;
-  font-size: 18px !important;
-}
-
-@media (max-width: 800px) {
-  header {
-    height: 150px;
-  }
-  header i {
-    right: -90%;
-  }
-}
-
-section {
-  padding: 20px 20px 0px 20px;
-}
-
-.left {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.photo {
-  width: 200px;
-  height: 200px;
-  margin-top: -120px;
-  border-radius: 100px;
-  border: 4px solid #fff;
-}
-
-.name {
-  margin-top: 20px;
-  font-family: "Open Sans";
-  font-weight: 600;
-  font-size: 18pt;
-  color: #777;
-}
-
-.info {
-  margin-top: -5px;
-  margin-bottom: 5px;
-  font-family: "Montserrat", sans-serif;
-  font-size: 11pt;
-  color: #aaa;
+.button-edit-profile {
+  background-color: blue;
 }
 
 :root {
