--- a/client/src/components/MessagesPage/_Messages.scss
+++ b/client/src/components/MessagesPage/_Messages.scss
@@ -1,3 +1,8 @@
+.messages-page {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
+
 .message-profile-pic {
   background-size: cover;
   height: 70px;
