--- a/client/src/index.css
+++ b/client/src/index.css
@@ -327,11 +327,26 @@ nav #nav-right-container #nav-inner-r #link a::selection {
   align-self: center;
 }
 
+.messages-page {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 3fr;
+      grid-template-columns: 1fr 3fr;
+}
+
 .message-profile-pic {
   background-size: cover;
   height: 70px;
   width: 70px;
   border-radius: 50%;
+}
+
+.outgoing {
+  background-color: blue;
+}
+
+.incoming {
+  background-color: red;
 }
 
 * {
