--- a/client/src/components/Signup/_Signup.scss
+++ b/client/src/components/Signup/_Signup.scss
@@ -1,127 +1,127 @@
-* {
-  padding: 10;
-  margin: 50;
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, sans-serif;
-}
-
-form {
-  width: 550px;
-  height: auto;
-  border-radius: 5px;
-  margin: 10% auto;
-  box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
-  padding: 2%;
-  background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
-}
-/* form Container */
-form .con {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-justify-content: space-around;
-  justify-content: space-around;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin: 3% auto;
-}
-/* the header form form */
-header {
-  margin: 2% auto 7% auto;
-  text-align: center;
-}
-/* title form form */
-header h2 {
-  font-family: Montserrat, sans-serif;
-  font-size: 250%;
-  color: #3e403f;
-}
-/*  A welcome message or an explanation of the form */
-header p {
-  letter-spacing: 0.05em;
-  color: #3e403f;
-}
-
-.field-set {
-  display: flex;
-  flex-direction: column;
-}
-
-.input-item {
-  color: #333;
-  width: 280px;
-  height: 50px;
-  padding: 0 20px;
-  background: #fff;
-  border-radius: 5px;
-  outline: none;
-  border: none;
-}
-
-/* inputs form  */
-input[class="form-input"] {
-  margin-top: 2%;
-  padding: 15px;
-  font-size: 16px;
-  font-family: Montserrat, sans-serif;
-  color: #5e6472;
-  outline: none;
-  border: none;
-  box-sizing: content-box;
-  transition: 0.2s linear;
-}
-input[id="txt-input"] {
-  width: 250px;
-}
-/* focus  */
-input:focus {
-  transform: translateX(-2px);
-  border-radius: 5px;
-}
-
-/* //////////////////////////////////////////// */
-/* //////////////////////////////////////////// */
-
-/* input[type="text"] {min-width: 250px;} */
-/* buttons  */
-button {
-  display: inline-block;
-  color: #233948;
-  width: 280px;
-  height: 50px;
-  padding: 0 20px;
-  background: #fff;
-  border-radius: 5px;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  text-align: center;
-  transition: all 0.2s linear;
-  margin: 2% auto;
-  letter-spacing: 0.05em;
-}
-/* Submits */
-.submits {
-  width: 48%;
-  display: inline-block;
-  margin-left: 2%;
-}
-
-/* buttons hover */
-button:hover {
-  transform: translatey(3px);
-  box-shadow: none;
-}
-
-/* buttons hover Animation */
-button:hover {
-  animation: ani9 0.4s ease-in-out infinite alternate;
-}
-@keyframes ani9 {
-  0% {
-    transform: translateY(3px);
+.main-box {
+  * {
+    box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      Helvetica, Arial, sans-serif, sans-serif;
   }
-  100% {
-    transform: translateY(5px);
+
+  form {
+    width: 550px;
+    height: auto;
+    border-radius: 5px;
+    margin: 10% auto;
+    box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
+    padding: 2%;
+    background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
+  }
+  /* form Container */
+  form .con {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: space-around;
+    justify-content: space-around;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin: 3% auto;
+  }
+  /* the header form form */
+  header {
+    margin: 2% auto 7% auto;
+    text-align: center;
+  }
+  /* title form form */
+  header h2 {
+    font-family: Montserrat, sans-serif;
+    font-size: 250%;
+    color: #3e403f;
+  }
+  /*  A welcome message or an explanation of the form */
+  header p {
+    letter-spacing: 0.05em;
+    color: #3e403f;
+  }
+
+  .field-set {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .input-item {
+    color: #333;
+    width: 280px;
+    height: 50px;
+    padding: 0 20px;
+    background: #fff;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+  }
+
+  /* inputs form  */
+  input[class="form-input"] {
+    margin-top: 2%;
+    padding: 15px;
+    font-size: 16px;
+    font-family: Montserrat, sans-serif;
+    color: #5e6472;
+    outline: none;
+    border: none;
+    box-sizing: content-box;
+    transition: 0.2s linear;
+  }
+  input[id="txt-input"] {
+    width: 250px;
+  }
+  /* focus  */
+  input:focus {
+    transform: translateX(-2px);
+    border-radius: 5px;
+  }
+
+  /* //////////////////////////////////////////// */
+  /* //////////////////////////////////////////// */
+
+  /* input[type="text"] {min-width: 250px;} */
+  /* buttons  */
+  button {
+    display: inline-block;
+    color: #233948;
+    width: 280px;
+    height: 50px;
+    padding: 0 20px;
+    background: #fff;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.2s linear;
+    margin: 2% auto;
+    letter-spacing: 0.05em;
+  }
+  /* Submits */
+  .submits {
+    width: 48%;
+    display: inline-block;
+    margin-left: 2%;
+  }
+
+  /* buttons hover */
+  button:hover {
+    transform: translatey(3px);
+    box-shadow: none;
+  }
+
+  /* buttons hover Animation */
+  button:hover {
+    animation: ani9 0.4s ease-in-out infinite alternate;
+  }
+  @keyframes ani9 {
+    0% {
+      transform: translateY(3px);
+    }
+    100% {
+      transform: translateY(5px);
+    }
   }
 }
