--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,26 @@
-* {
-  padding: 10;
-  margin: 50;
+.main-box {
+  /* form Container */
+  /* the header form form */
+  /* title form form */
+  /*  A welcome message or an explanation of the form */
+  /* inputs form  */
+  /* focus  */
+  /* //////////////////////////////////////////// */
+  /* //////////////////////////////////////////// */
+  /* input[type="text"] {min-width: 250px;} */
+  /* buttons  */
+  /* Submits */
+  /* buttons hover */
+  /* buttons hover Animation */
+}
+
+.main-box * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
 }
 
-form {
+.main-box form {
   width: 550px;
   height: auto;
   border-radius: 5px;
@@ -17,8 +31,7 @@ form {
   background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
 }
 
-/* form Container */
-form .con {
+.main-box form .con {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -29,26 +42,23 @@ form .con {
   margin: 3% auto;
 }
 
-/* the header form form */
-header {
+.main-box header {
   margin: 2% auto 7% auto;
   text-align: center;
 }
 
-/* title form form */
-header h2 {
+.main-box header h2 {
   font-family: Montserrat, sans-serif;
   font-size: 250%;
   color: #3e403f;
 }
 
-/*  A welcome message or an explanation of the form */
-header p {
+.main-box header p {
   letter-spacing: 0.05em;
   color: #3e403f;
 }
 
-.field-set {
+.main-box .field-set {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -58,7 +68,7 @@ header p {
           flex-direction: column;
 }
 
-.input-item {
+.main-box .input-item {
   color: #333;
   width: 280px;
   height: 50px;
@@ -69,8 +79,7 @@ header p {
   border: none;
 }
 
-/* inputs form  */
-input[class="form-input"] {
+.main-box input[class="form-input"] {
   margin-top: 2%;
   padding: 15px;
   font-size: 16px;
@@ -84,22 +93,17 @@ input[class="form-input"] {
   transition: 0.2s linear;
 }
 
-input[id="txt-input"] {
+.main-box input[id="txt-input"] {
   width: 250px;
 }
 
-/* focus  */
-input:focus {
+.main-box input:focus {
   -webkit-transform: translateX(-2px);
           transform: translateX(-2px);
   border-radius: 5px;
 }
 
-/* //////////////////////////////////////////// */
-/* //////////////////////////////////////////// */
-/* input[type="text"] {min-width: 250px;} */
-/* buttons  */
-button {
+.main-box button {
   display: inline-block;
   color: #233948;
   width: 280px;
@@ -117,23 +121,20 @@ button {
   letter-spacing: 0.05em;
 }
 
-/* Submits */
-.submits {
+.main-box .submits {
   width: 48%;
   display: inline-block;
   margin-left: 2%;
 }
 
-/* buttons hover */
-button:hover {
+.main-box button:hover {
   -webkit-transform: translatey(3px);
           transform: translatey(3px);
   -webkit-box-shadow: none;
           box-shadow: none;
 }
 
-/* buttons hover Animation */
-button:hover {
+.main-box button:hover {
   -webkit-animation: ani9 0.4s ease-in-out infinite alternate;
           animation: ani9 0.4s ease-in-out infinite alternate;
 }
@@ -502,15 +503,29 @@ nav #nav-right-container #nav-inner-r #link a::selection {
   margin: 0;
 }
 
-* {
-  padding: 10;
-  margin: 50;
+.main-box {
+  /* form Container */
+  /* the header form form */
+  /* title form form */
+  /*  A welcome message or an explanation of the form */
+  /* inputs form  */
+  /* focus  */
+  /* //////////////////////////////////////////// */
+  /* //////////////////////////////////////////// */
+  /* input[type="text"] {min-width: 250px;} */
+  /* buttons  */
+  /* Submits */
+  /* buttons hover */
+  /* buttons hover Animation */
+}
+
+.main-box * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
 }
 
-form {
+.main-box form {
   width: 550px;
   height: auto;
   border-radius: 5px;
@@ -521,8 +536,7 @@ form {
   background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
 }
 
-/* form Container */
-form .con {
+.main-box form .con {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -533,26 +547,23 @@ form .con {
   margin: 3% auto;
 }
 
-/* the header form form */
-header {
+.main-box header {
   margin: 2% auto 7% auto;
   text-align: center;
 }
 
-/* title form form */
-header h2 {
+.main-box header h2 {
   font-family: Montserrat, sans-serif;
   font-size: 250%;
   color: #3e403f;
 }
 
-/*  A welcome message or an explanation of the form */
-header p {
+.main-box header p {
   letter-spacing: 0.05em;
   color: #3e403f;
 }
 
-.field-set {
+.main-box .field-set {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -562,7 +573,7 @@ header p {
           flex-direction: column;
 }
 
-.input-item {
+.main-box .input-item {
   color: #333;
   width: 280px;
   height: 50px;
@@ -573,8 +584,7 @@ header p {
   border: none;
 }
 
-/* inputs form  */
-input[class="form-input"] {
+.main-box input[class="form-input"] {
   margin-top: 2%;
   padding: 15px;
   font-size: 16px;
@@ -588,22 +598,17 @@ input[class="form-input"] {
   transition: 0.2s linear;
 }
 
-input[id="txt-input"] {
+.main-box input[id="txt-input"] {
   width: 250px;
 }
 
-/* focus  */
-input:focus {
+.main-box input:focus {
   -webkit-transform: translateX(-2px);
           transform: translateX(-2px);
   border-radius: 5px;
 }
 
-/* //////////////////////////////////////////// */
-/* //////////////////////////////////////////// */
-/* input[type="text"] {min-width: 250px;} */
-/* buttons  */
-button {
+.main-box button {
   display: inline-block;
   color: #233948;
   width: 280px;
@@ -621,23 +626,20 @@ button {
   letter-spacing: 0.05em;
 }
 
-/* Submits */
-.submits {
+.main-box .submits {
   width: 48%;
   display: inline-block;
   margin-left: 2%;
 }
 
-/* buttons hover */
-button:hover {
+.main-box button:hover {
   -webkit-transform: translatey(3px);
           transform: translatey(3px);
   -webkit-box-shadow: none;
           box-shadow: none;
 }
 
-/* buttons hover Animation */
-button:hover {
+.main-box button:hover {
   -webkit-animation: ani9 0.4s ease-in-out infinite alternate;
           animation: ani9 0.4s ease-in-out infinite alternate;
 }
@@ -661,7 +663,7 @@ button:hover {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, sans-serif;
 }
 
-.container {
+.page .container {
   max-width: 1250px;
   border-radius: 5px;
   margin: 10% auto;
@@ -671,7 +673,7 @@ button:hover {
   padding: 2%;
 }
 
-.profile-banner {
+.page .profile-banner {
   background: #eee;
   background-repeat: no-repeat;
   background-position: center;
@@ -680,7 +682,7 @@ button:hover {
   height: 250px;
 }
 
-header i {
+.page header i {
   position: relative;
   cursor: pointer;
   right: -96%;
@@ -689,19 +691,19 @@ header i {
 }
 
 @media (max-width: 800px) {
-  header {
+  .page header {
     height: 150px;
   }
-  header i {
+  .page header i {
     right: -90%;
   }
 }
 
-section {
+.page section {
   padding: 20px 20px 0px 20px;
 }
 
-.left {
+.page .left {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -717,7 +719,7 @@ section {
           flex-direction: column;
 }
 
-.photo {
+.page .photo {
   width: 200px;
   height: 200px;
   margin-top: -120px;
@@ -725,7 +727,27 @@ section {
   border: 4px solid #fff;
 }
 
-.name {
+.page .photo-left img {
+  position: absolute;
+}
+
+.page .photo-left .overlaybutton {
+  display: block;
+  width: 200px;
+  height: 200px;
+  margin-top: -120px;
+  border-radius: 100px;
+  border: 4px solid #fff;
+  position: relative;
+  opacity: 0.7;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+  -webkit-transition: opacity 0.13s ease-out;
+  transition: opacity 0.13s ease-out;
+}
+
+.page .name {
   margin-top: 20px;
   font-family: "Open Sans";
   font-weight: 600;
@@ -733,12 +755,104 @@ section {
   color: #777;
 }
 
-.info {
+.page .info {
   margin-top: -5px;
   margin-bottom: 5px;
   font-family: "Montserrat", sans-serif;
   font-size: 11pt;
   color: #aaa;
+}
+
+.page .desc {
+  text-align: center;
+  margin-top: 25px;
+  margin: 25px 40px;
+  color: #999;
+  font-size: 15pt;
+  font-family: "Open Sans";
+  padding-bottom: 25px;
+  border-bottom: 1px solid #ededed;
+}
+
+.page .right {
+  padding: 0 25px 0 25px !important;
+}
+
+.page .side-nav {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+
+.page .side-nav li {
+  margin: 40px 30px 0 10px;
+  cursor: pointer;
+  font-size: 13pt;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  color: #888;
+}
+
+.page .side-nav li:hover,
+.page .side-nav li:nth-child(1) {
+  color: #999;
+  border-bottom: 2px solid #999;
+}
+
+@media (max-width: 990px) {
+  .page .side-nav {
+    display: none;
+  }
+}
+
+.page .my-messages {
+  position: absolute;
+  right: 8%;
+  top: 35px;
+  font-size: 11pt;
+  background-color: #9dd57c;
+  color: #fff;
+  padding: 8px 15px;
+  cursor: pointer;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  font-weight: 400;
+}
+
+.page .my-messages a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.page .my-messages {
+  width: 50%;
+  margin-left: 25%;
+  display: block;
+  position: unset;
+  text-align: center;
+}
+
+.page .my-messages:hover {
+  -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.2), 0 0 15px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 15px rgba(0, 0, 0, 0.2), 0 0 15px rgba(0, 0, 0, 0.2);
+}
+
+.page .gallery {
+  margin-top: 35px;
+}
+
+.page .gallery div {
+  margin-bottom: 30px;
+}
+
+.page .gallery img {
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
+  width: auto;
+  height: auto;
+  cursor: pointer;
+  max-width: 100%;
 }
 
 :root {
