--- a/client/src/components/Profile/_Profile.scss
+++ b/client/src/components/Profile/_Profile.scss
@@ -56,6 +56,8 @@
   .photo {
     width: 200px;
     height: 200px;
+    padding: unset;
+    margin: auto;
     margin-top: -120px;
     border-radius: 100px;
     border: 4px solid #fff;
@@ -66,44 +68,39 @@
   }
 
   .photo-left .overlaybutton {
-    display: block;
-    width: 200px;
-    height: 200px;
-    margin-top: -120px;
-    border-radius: 100px;
-    border: 4px solid #fff;
-    position: relative;
-    opacity: 0;
-    cursor: pointer;
-    overflow: hidden;
-    outline: none;
+    display: block !important;
+    width: 200px !important;
+    height: 200px !important;
+    padding: unset;
+    margin: auto;
+    margin-top: -120px !important;
+    border-radius: 100px !important;
+    border: 4px solid #fff !important;
+    position: relative !important;
+    opacity: 0 !important;
+    cursor: pointer !important;
+    overflow: hidden !important;
+    outline: none !important;
     //opacity: 0;
     // transition: opacity 0.13s ease-out;
 
     &:hover {
-      opacity: 0.7;
-      color: white;
-      display: block;
-      text-align: center;
-      line-height: 250px;
-      font-size: 0.85em;
-      background-color: black;
-      background-size: 20%;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-image: url("https://res.cloudinary.com/artistree/image/upload/v1590077361/artistree/pngkey.com-camera-icon-png-104955_sjufa6.png");
+      padding: unset;
+      margin: auto;
+      transition: none !important;
+      transform: none !important;
+      opacity: 0.7 !important;
+      color: white !important;
+      display: block !important;
+      text-align: center !important;
+      line-height: 250px !important;
+      font-size: 0.85em !important;
+      background-color: black !important;
+      background-size: 20% !important;
+      background-position: center !important;
+      background-repeat: no-repeat !important;
+      background-image: url("https://res.cloudinary.com/artistree/image/upload/v1590077361/artistree/pngkey.com-camera-icon-png-104955_sjufa6.png") !important;
     }
-
-    // &:active {
-    //   transition: all 0.3s ease-out;
-    //   box-shadow: 0 -1px 0 0 white inset, 0 -2px 0 0 $color-accent inset;
-    // }
-
-    // &::selection {
-    //   color: white;
-    //   background: $color-accent;
-    //   text-shadow: none;
-    // }
   }
 
   .name {
@@ -181,15 +178,6 @@
     text-decoration: none;
     color: #233948;
   }
-  //   .my-messages {
-  //     width: 15%;
-  //     display: block;
-  //     position: unset;
-  //     text-align: center;
-  //   }
-  //   .my-messages:hover {
-  //     box-shadow: 0 9px 50px hsla(0, 0%, 75%, 0.31);
-  //   }
 
   .button-forms {
     display: inline-block;
