--- a/client/src/index.css
+++ b/client/src/index.css
@@ -749,6 +749,8 @@ nav #nav-right-container #nav-inner-r #link a::selection {
 .page .photo {
   width: 200px;
   height: 200px;
+  padding: unset;
+  margin: auto;
   margin-top: -120px;
   border-radius: 100px;
   border: 4px solid #fff;
@@ -759,31 +761,39 @@ nav #nav-right-container #nav-inner-r #link a::selection {
 }
 
 .page .photo-left .overlaybutton {
-  display: block;
-  width: 200px;
-  height: 200px;
-  margin-top: -120px;
-  border-radius: 100px;
-  border: 4px solid #fff;
-  position: relative;
-  opacity: 0;
-  cursor: pointer;
-  overflow: hidden;
-  outline: none;
+  display: block !important;
+  width: 200px !important;
+  height: 200px !important;
+  padding: unset;
+  margin: auto;
+  margin-top: -120px !important;
+  border-radius: 100px !important;
+  border: 4px solid #fff !important;
+  position: relative !important;
+  opacity: 0 !important;
+  cursor: pointer !important;
+  overflow: hidden !important;
+  outline: none !important;
 }
 
 .page .photo-left .overlaybutton:hover {
-  opacity: 0.7;
-  color: white;
-  display: block;
-  text-align: center;
-  line-height: 250px;
-  font-size: 0.85em;
-  background-color: black;
-  background-size: 20%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("https://res.cloudinary.com/artistree/image/upload/v1590077361/artistree/pngkey.com-camera-icon-png-104955_sjufa6.png");
+  padding: unset;
+  margin: auto;
+  -webkit-transition: none !important;
+  transition: none !important;
+  -webkit-transform: none !important;
+          transform: none !important;
+  opacity: 0.7 !important;
+  color: white !important;
+  display: block !important;
+  text-align: center !important;
+  line-height: 250px !important;
+  font-size: 0.85em !important;
+  background-color: black !important;
+  background-size: 20% !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-image: url("https://res.cloudinary.com/artistree/image/upload/v1590077361/artistree/pngkey.com-camera-icon-png-104955_sjufa6.png") !important;
 }
 
 .page .name {
